--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,8 +1,37 @@
 <html>
   <head>
     <title>Segment Hooks</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
+
+    <style type="text/css">
+      body {
+        background-color:#3cc76a;
+      }
+
+      h1 {
+        margin: 1em 24px 1em 24px;
+        color: #FFF;
+      }
+
+      .section {
+        padding: 1rem 2em;
+      }
+
+      .collapsible-body {
+        background: #FFF;
+      }
+    </style>
   </head>
   <body>
-    <%- body %>
+    <div class="container">
+      <%- body %>
+    </div>
   </body>
 </html>
