--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,6 +10,12 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
 
+    <script>
+      $(document).ready(function() {
+        $('select').material_select();
+      });
+    </script>
+
     <style type="text/css">
       body {
         background-color:#3cc76a;
